--- a/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
+++ b/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
@@ -46,13 +46,19 @@
   <ItemGroup>
     <Compile Include="Domain\Models\RecyclableItem.cs" />
     <Compile Include="Domain\Models\RecyclableType.cs" />
+    <Compile Include="Domain\Models\Validations\UniqueType.cs" />
     <Compile Include="Domain\RepositoryContracts\IGenericRepository.cs" />
     <Compile Include="Domain\RepositoryContracts\IRecyclableItemRepository.cs" />
     <Compile Include="Domain\RepositoryContracts\IRecyclableTypeRepository.cs" />
+    <Compile Include="Dto\RecyclableItemDtos\RecyclableItemAddRequest.cs" />
+    <Compile Include="Dto\RecyclableItemDtos\RecyclableItemResponse.cs" />
+    <Compile Include="Dto\RecyclableItemDtos\RecyclableItemUpdateRequest.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeAddRequest.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeResponse.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeUpdateRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Dto\" />
     <Folder Include="ServiceContracts\" />
     <Folder Include="Services\" />
   </ItemGroup>
