--- a/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
+++ b/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=10.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.10.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -44,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoMapperProfiles\AutoMapperProfile.cs" />
     <Compile Include="Domain\Models\RecyclableItem.cs" />
     <Compile Include="Domain\Models\RecyclableType.cs" />
     <Compile Include="Domain\Models\Validations\UniqueType.cs" />
@@ -53,17 +57,17 @@
     <Compile Include="Dto\RecyclableItemDtos\RecyclableItemAddRequest.cs" />
     <Compile Include="Dto\RecyclableItemDtos\RecyclableItemResponse.cs" />
     <Compile Include="Dto\RecyclableItemDtos\RecyclableItemUpdateRequest.cs" />
-    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeAddRequest.cs" />
-    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeResponse.cs" />
-    <Compile Include="Dto\RecyclableTypeDtos\RyclableTypeUpdateRequest.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RecyclableTypeAddRequest.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RecyclableTypeResponse.cs" />
+    <Compile Include="Dto\RecyclableTypeDtos\RecyclableTypeUpdateRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceContracts\IGenericService.cs" />
+    <Compile Include="Services\GenericService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ServiceContracts\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
