--- a/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
+++ b/src/RecyclableCalculator.Core/RecyclableCalculator.Core.csproj
@@ -62,7 +62,11 @@
     <Compile Include="Dto\RecyclableTypeDtos\RecyclableTypeUpdateRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceContracts\IGenericService.cs" />
+    <Compile Include="ServiceContracts\IRecyclableItemService.cs" />
+    <Compile Include="ServiceContracts\IRecyclableTypeService.cs" />
     <Compile Include="Services\GenericService.cs" />
+    <Compile Include="Services\RecyclableItemService.cs" />
+    <Compile Include="Services\RecyclableTypeService.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
