--- a/src/RecyclableCalculator.Web/RecyclableCalculator.Web.csproj
+++ b/src/RecyclableCalculator.Web/RecyclableCalculator.Web.csproj
@@ -207,6 +207,8 @@
     <Content Include="Views\RecyclableTypes\Delete.cshtml" />
     <Content Include="Views\RecyclableItems\Index.cshtml" />
     <Content Include="Views\RecyclableItems\Create.cshtml" />
+    <Content Include="Views\RecyclableItems\Edit.cshtml" />
+    <Content Include="Views\RecyclableItems\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
