--- a/src/RecyclableCalculator.Web/Web.config
+++ b/src/RecyclableCalculator.Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=WIN-85ASRVT6PLL\SQLEXPRESS;Initial Catalog=RecyclableCalculatorDb;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=WIN-85ASRVT6PLL\SQLEXPRESS;Initial Catalog=RecyclableCalculatorDb;Integrated Security=True;Pooling=False;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
